feat: complete product labels integration with nutritional information